--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "devDependencies": {
         "@symfony/stimulus-bridge": "^2.0.0",
-        "@symfony/webpack-encore": "^1.0.0",
+        "@symfony/webpack-encore": "^1.6.1",
         "core-js": "^3.0.0",
         "regenerator-runtime": "^0.13.2",
         "stimulus": "^2.0.0",
@@ -16,6 +16,8 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "encore": "^0.0.30-beta"
+        "encore": "^0.0.30-beta",
+        "jquery": "^3.6.0",
+        "webpack": "^5.57.1"
     }
 }
