--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "core-js": "^3.0.0",
         "regenerator-runtime": "^0.13.2",
         "stimulus": "^2.0.0",
-        "webpack-notifier": "^1.6.0"
+        "webpack-notifier": "^1.14.0"
     },
     "license": "UNLICENSED",
     "private": true,
@@ -16,8 +16,9 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "bootstrap": "^5.1.2",
         "encore": "^0.0.30-beta",
         "jquery": "^3.6.0",
-        "webpack": "^5.57.1"
+        "webpack": "^5.58.0"
     }
 }
